--- a/Travel/Views/Shared/_TestLayout.cshtml
+++ b/Travel/Views/Shared/_TestLayout.cshtml
@@ -50,18 +50,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="header-bottom">
         <div class="wrap">
             <ul id="nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a class="hsubs" href="/Default/About/">About</a></li>
+                <li><a href="index.html">Anasayfa</a></li>
+                <li><a class="hsubs" href="/Default/About/">Hakkımızda</a></li>
                 <li>
-                    <a class="hsubs" href="destinations.html">Destinations</a>
+                    <a class="hsubs" href="destinations.html">Rehber</a>
                     <ul class="subs">
                         <li><a href="#">Hotels</a></li>
                         <li><a href="#">Restaurants</a></li>
                         <li><a href="#">Beach Resorts</a></li>
                     </ul>
                 </li>
-                <li><a class="hsubs" href="destinations.html">Free Travel Guides</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a class="hsubs" href="destinations.html">Blogum</a></li>
+                <li><a href="contact.html">İletisim</a></li>
             </ul>
         </div>
     </div>
