--- a/Travel/Views/Blog/Index.cshtml
+++ b/Travel/Views/Blog/Index.cshtml
@@ -1,4 +1,9 @@
 ﻿
+@using Travel.Models.Sınıflar;
+
+@model List<Blog>
+
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_TestLayout.cshtml";
@@ -7,7 +12,6 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Personal Blog a Blogging Category Flat Bootstarp  Responsive Website Template | Single :: w3layouts</title>
     <link href="~/web2/css/bootstrap.css" rel='stylesheet' type='text/css' />
     <link href="~/web2/css/style.css" rel='stylesheet' type='text/css' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,20 +25,10 @@
     <!----//webfonts---->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!--end slider -->
-    <!--script-->
+
     <script type="text/javascript" src="~/web2/js/move-top.js"></script>
     <script type="text/javascript" src="~/web2/js/easing.js"></script>
     <!--/script-->
-    <script type="text/javascript">
-			jQuery(document).ready(function($) {
-				$(".scroll").click(function(event){
-					event.preventDefault();
-					$('html,body').animate({scrollTop:$(this.hash).offset().top},900);
-				});
-			});
-    </script>
-    <!---->
-
 </head>
 <body>
     <!---header---->
@@ -49,7 +43,7 @@
         <div class="container">
             <div class="col-md-8 single-main">
                 <div class="single-grid">
-                    <img src="~/web2/images/post1.jpg" alt="" style="margin-bottom: 10px"/>
+                    <img src="~/web2/images/post1.jpg" alt="" style="margin-bottom: 10px" />
 
                     <a href="#">Londra'da bir gece</a>
                     <p>
@@ -61,7 +55,7 @@
                 </div>
 
                 <div class="single-grid">
-                    <img src="~/web2/images/post5.jpeg" alt="" style="margin-bottom: 2px"/>
+                    <img src="~/web2/images/post5.jpeg" alt="" style="margin-bottom: 2px" />
 
                     <a href="#">Paris'de bir gece</a>
                     <p>
@@ -89,9 +83,10 @@
                         <li><a href="#">Amada Doe </a> on <a href="#">Hello World!</a></li>
                         <li><a href="#">Peter Doe </a> on <a href="#"> Photography</a></li>
                     </ul>
-                </div>            
+                </div>
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
-    </body>
+</body>
+</html>
