--- a/Travel/Views/Shared/_TestLayout.cshtml
+++ b/Travel/Views/Shared/_TestLayout.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 @{
     Layout = null;
 }
@@ -60,7 +61,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li><a href="#">Beach Resorts</a></li>
                     </ul>
                 </li>
-                <li><a class="hsubs" href="destinations.html">Blogum</a></li>
+                <li><a class="hsubs" href="/Blog/Index/">Blogum</a></li>
                 <li><a href="contact.html">İletisim</a></li>
             </ul>
         </div>
