--- a/Travel/Views/Blog/Index.cshtml
+++ b/Travel/Views/Blog/Index.cshtml
@@ -42,6 +42,8 @@
     <div class="single">
         <div class="container">
             <div class="col-md-8 single-main">
+            @foreach( var x in Model) 
+                {
                 <div class="single-grid">
                     <img src="~/web2/images/post1.jpg" alt="" style="margin-bottom: 10px" />
 
@@ -53,18 +55,8 @@
                         Phasellus et lacus quis lacus imperdiet fermentum eu a enim. Praesent non lorem rhoncus, cursus leo nec, pellentesque dui..
                     </p>
                 </div>
-
-                <div class="single-grid">
-                    <img src="~/web2/images/post5.jpeg" alt="" style="margin-bottom: 2px" />
-
-                    <a href="#">Paris'de bir gece</a>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged.
-                    </p>
-                </div>
-
+                <br />
+            }
             </div>
 
             <div class="col-md-4 side-content">
