--- a/Travel/Views/Blog/Index.cshtml
+++ b/Travel/Views/Blog/Index.cshtml
@@ -47,12 +47,9 @@
                 <div class="single-grid">
                     <img src="~/web2/images/post1.jpg" alt="" style="margin-bottom: 10px" />
 
-                    <a href="#">Londra'da bir gece</a>
+                    <a href="/Blog/BlogDetay/@x.ID"> @x.Baslik</a>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged.
-                        Phasellus et lacus quis lacus imperdiet fermentum eu a enim. Praesent non lorem rhoncus, cursus leo nec, pellentesque dui..
+                        @x.Aciklama
                     </p>
                 </div>
                 <br />
@@ -69,6 +66,7 @@
                         <li><a href="#">Cras ornare tristiqu</a></li>
                     </ul>
                 </div>
+                
                 <div class="comments">
                     <h3>Son Yorumlar</h3>
                     <ul>
