--- a/Travel/Views/Blog/BlogDetay.cshtml
+++ b/Travel/Views/Blog/BlogDetay.cshtml
@@ -1,4 +1,6 @@
 ﻿
+@using Travel.Models.Sınıflar
+@model List<Blog>
 @{
     ViewBag.Title = "BlogDetay";
     Layout = "~/Views/Shared/_TestLayout.cshtml";
@@ -44,11 +46,13 @@
         <div class="container">
             <div class="col-md-8 single-main">
                 <div class="single-grid">
-                    <img src="~/web2/images/post1.jpg" alt="" />
+                @foreach(var x in Model) {
+                    <img src="~/web2/images/post1.jpg" alt="" style="margin-bottom:20px" />
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Nullam a efficitur odio, ac maximus lorem. Nullam aliquam fermentum lectus ut sagittis. Sed pulvinar sed ligula gravida condimentum. Proin eleifend vestibulum tortor, ut pellentesque lorem tempor a. Nunc pharetra lacus at laoreet suscipit. Aliquam tempor mattis sagittis. Mauris viverra mi quis risus molestie placerat. Sed accumsan vestibulum fringilla. Etiam dapibus tellus ac eros placerat, at aliquam arcu lobortis. Vestibulum sollicitudin mauris dui, a tempor metus lacinia sed. Nam a auctor purus, nec rutrum ipsum. Maecenas lacus ex, finibus non tempor at, ultrices id sem. Suspendisse et magna et tellus facilisis lacinia at et diam. Fusce finibus ullamcorper ligula non tristique. Nulla facilisi. Donec ultricies nisi vel quam venenatis efficitur. Praesent porta risus arcu, at egestas ante accumsan eu.
                         Phasellus et lacus quis lacus imperdiet fermentum eu a enim. Praesent non lorem rhoncus, cursus leo nec, pellentesque dui..
                     </p>
+                }
                 </div>
                 <ul class="comment-list">
                     <li>
@@ -72,13 +76,12 @@
 
 
                 <div class="content-form">
-                    <h3>Leave a comment</h3>
+                    <h3>Yorum Yapınız</h3>
                     <form>
-                        <input type="text" placeholder="Name" required />
-                        <input type="text" placeholder="Email" required />
-                        <input type="text" placeholder="Phone" required />
-                        <textarea placeholder="Message"></textarea>
-                        <input type="submit" value="SEND" />
+                        <input type="text" placeholder="KullaniciAdi" required />
+                        <input type="text" placeholder="Mail" required />
+                        <textarea placeholder="Yorum"></textarea>
+                        <input type="submit" value="GONDER" />
                     </form>
                 </div>
             </div>
@@ -104,7 +107,6 @@
 
             </div>
         </div>
-    </div>
     </div>
 </body>
 </html>
